[gd_scene load_steps=5 format=3 uid="uid://bmtvtiqkt1pc"]

[ext_resource type="Script" path="res://Scripts/main_handler.gd" id="1_ngpfn"]
[ext_resource type="Texture2D" uid="uid://itsh6r7y2qq7" path="res://Assets/Misc/space_bg_2.jpg" id="2_8dmf7"]
[ext_resource type="AudioStream" uid="uid://bpcej831ty03f" path="res://Assets/Sounds/background_music_2.mp3" id="3_f5khm"]
[ext_resource type="Script" path="res://Scripts/settingsMenu.gd" id="4_3723g"]

[node name="mainHandler" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ngpfn")

[node name="mainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="mainMenu"]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -512.5
offset_top = 71.0
offset_right = 512.5
offset_bottom = 240.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0.945098, 0.952941, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 60
text = "Race to Repair
GMTK Game Jam 2024"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="mainMenu"]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2
offset_left = 362.0
offset_top = 258.0
offset_right = 662.0
offset_bottom = 508.0
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.188235, 0.00392157, 0.211765, 0.643137)

[node name="Background" type="TextureRect" parent="mainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8dmf7")

[node name="MarginContainer" type="MarginContainer" parent="mainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="mainMenu/MarginContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="mainMenu/MarginContainer/VBoxContainer"]
stream = ExtResource("3_f5khm")
volume_db = 5.0
autoplay = true
bus = &"BG"

[node name="newGame" type="Button" parent="mainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0.946652, 0.952948, 1)
theme_override_colors/font_hover_color = Color(0, 0.945098, 0.952941, 1)
theme_override_font_sizes/font_size = 30
text = "New Game"

[node name="settings" type="Button" parent="mainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0.945098, 0.952941, 1)
theme_override_colors/font_hover_color = Color(0, 0.945098, 0.952941, 1)
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="exitGame" type="Button" parent="mainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0.945098, 0.952941, 1)
theme_override_colors/font_hover_color = Color(0, 0.945098, 0.952941, 1)
theme_override_font_sizes/font_size = 30
text = "Exit Game
"

[node name="settingsMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_3723g")

[node name="ColorRect" type="ColorRect" parent="settingsMenu"]
custom_minimum_size = Vector2(300, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.0217532, 0.251375, 1)

[node name="SettingsLabel" type="Label" parent="settingsMenu/ColorRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 18.0
offset_bottom = 73.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Settings
"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="settingsMenu/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -44.0
offset_right = 89.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="settingsMenu/ColorRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BG_vol" type="Label" parent="settingsMenu/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Background Volume"
horizontal_alignment = 1

[node name="BG_vol_slider" type="HSlider" parent="settingsMenu/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.5

[node name="SFX_vol" type="Label" parent="settingsMenu/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Special  Effects Volume"
horizontal_alignment = 1

[node name="SFX_vol_slider" type="HSlider" parent="settingsMenu/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.5

[node name="Back" type="Button" parent="settingsMenu/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="settingsMenu/ColorRect/MarginContainer/VBoxContainer/BG_vol_slider" to="settingsMenu" method="_on_bg_vol_slider_value_changed"]
[connection signal="value_changed" from="settingsMenu/ColorRect/MarginContainer/VBoxContainer/SFX_vol_slider" to="settingsMenu" method="_on_sfx_vol_slider_value_changed"]
[connection signal="pressed" from="settingsMenu/ColorRect/MarginContainer/VBoxContainer/Back" to="settingsMenu" method="_on_back_pressed"]
